multi-question directive now lists available options and has filtering

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -1,8 +1,8 @@
-<div kcd-recompile="stateChange">
+<div av-recompile="stateChange">
   <avb-busy ng-if="state == stateEnum.receivingElection">
     <p ng-i18next="avBooth.loadingElectionTitle"></p>
   </avb-busy>
-    <avb-error-screen ng-if="state == stateEnum.errorScreen">
+  <avb-error-screen ng-if="state == stateEnum.errorScreen">
   </avb-error-screen>
   <avb-start-screen ng-if="state == stateEnum.startScreen">
   </avb-start-screen>
