--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -1,3 +1,4 @@
+<!-- top navbar with question title -->
 <nav class="navbar navbar-default navbar-fixed-top" av-affix-top=".navbar-unfixed-top" role="navigation">
   <div class="container">
     <div class="row avb-top-navbar">
@@ -29,20 +30,67 @@
 <div class="content avb-content">
   <div class="container">
     <div class="row">
-      <div class="visible-xs col-xs-12">
-        small device
+      <!-- only shown if in mobile: a row with selected opts and filter -->
+      <div class="visible-xs col-xs-12 small-selected">
+        <div class="pull-left">
+          <h4 class="text-brand-success" ng-i18next="[i18next]({count: ballotClearText[stateData.questionNum].length})avBooth.numSelectedOptionsSmall"></h4>
+          <span class="text-brand-success glyphicon glyphicon-play avb-toggle-span"></span>
+        </div>
+        <div class="pull-right filter-input">
+          <div class="pull-right filter-input">
+            <input type="text"
+              class="filter-input"
+              id="filter-input"
+              ng-model="stateData.filter"
+              ng-model-options="{debounce: 500}"
+              ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder"
+              />
+            <span class="glyphicon glyphicon-search"></span>
+          </div>
+        </div>
       </div>
+
+      <!-- show available options and filter -->
       <div class="col-xs-12 col-sm-6">
-        <h4 class="hidden-xs text-brand-success" ng-i18next="avBooth.questionAvailableOptionsTitle"></h3>
+        <div class="pull-left hidden-xs">
+          <h4 class="text-brand-success" ng-i18next="avBooth.questionAvailableOptionsTitle"></h3>
+        </div>
+        <div class="pull-right filter-input hidden-xs">
+          <input type="text"
+            class="filter-input"
+            id="filter-input"
+            ng-model="stateData.filter"
+            ng-model-options="{debounce: 500}"
+            ng-i18next="[placeholder]avBooth.filterOptionsPlaceholder"
+            />
+          <span class="glyphicon glyphicon-search"></span>
+        </div>
+        <avb-available-options
+          sortable="true"
+          max="election.questions[stateData.questionNum].max"
+          min="election.questions[stateData.questionNum].min"
+          selection="ballotClearText[stateData.questionNum]"
+          options="election.questions[stateData.questionNum].answers"
+          filter="{{stateData.filter}}">
+        <avb-available-options>
       </div>
+
+      <!-- show selected options -->
       <div class="hidden-xs col-sm-6">
         <h4 class="text-brand-success" ng-i18next="avBooth.questionSelectedOptionsTitle"></h3>
         <p>
-          <span ng-i18next="avBooth.noOptionsSelected"></span>
+          <span ng-i18next="[i18next]({count: ballotClearText[stateData.questionNum].length})avBooth.numOptionsSelected"></span>
           <span ng-i18next="[i18next]({min:stateData.question.min, max:stateData.question.max})avBooth.numOptionsLimits"></span>
         </p>
+        <avb-selected-options
+          sortable="true"
+          selection="ballotClearText[stateData.questionNum]"
+          options="election.questions[stateData.questionNum].answers">
+        <avb-selected-options>
       </div>
     </div>
+
+    <!-- next button -->
     <div class="row" av-affix-bottom data-force-affix-width="768">
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
