--- a/index.html
+++ b/index.html
@@ -80,6 +80,8 @@
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="avBooth/error-screen-directive/error-screen-directive.js" class="app"></script>
+  <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
+  <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
   <script src="test/test_hmac.js" class="app"></script>
 
   <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
