--- a/avBooth/start-screen-directive/start-screen-directive.html
+++ b/avBooth/start-screen-directive/start-screen-directive.html
@@ -27,17 +27,21 @@
 
 <div class="content avb-content start-screen">
   <div class="container">
-    <p ng-i18next="avBooth.stepsToVote"></p>
     <div class="row">
-      <div class="col-xs-12 col-sm-4">
+      <div class="padded col-xs-12">
+        <p ng-i18next="avBooth.stepsToVote"></p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="padded col-xs-12 col-sm-4">
         <h3 class="text-brand-success" ng-i18next="avBooth.selectOptionsTitle"></h3>
         <p ng-i18next="avBooth.selectOptionsText"></p>
       </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="padded col-xs-12 col-sm-4">
         <h3 class="text-brand-success" ng-i18next="avBooth.reviewOptionsTitle"></h3>
         <p ng-i18next="avBooth.reviewOptionsText"></p>
       </div>
-      <div class="col-xs-12 col-sm-4">
+      <div class="padded col-xs-12 col-sm-4">
         <h3 class="text-brand-success" ng-i18next="avBooth.encryptAndEmitBallotTitle"></h3>
         <p ng-i18next="avBooth.encryptAndEmitBallotText"></p>
       </div>
