--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -1,10 +1,13 @@
-<div class="col-xs-12">
-  <ul>
-    <li ng-repeat="option in options | filter:filter" class="animate-repeat">
-      {{option.value}}
-    </li>
-    <li class="animate-repeat" ng-if="(options | filter:filter).length == 0">
-      <span ng-i18next="avBooth.noResults"></span>
-    </li>
-  </ul>
+<div class="col-xs-12" ng-if="layout === 'primary'">
+  <avb-detailed-option
+    ng-repeat="option in options | filter:filter"
+    class="animate-repeat"
+    ng-class="{selected: option.selected > -1}"
+    ng-click="toggleSelectItem(option)">
+  </avb-detailed-option>
+  <div
+    class="animate-repeat"
+    ng-if="(options | filter:filter).length == 0"
+    ng-i18next="avBooth.noResults">
+  </div>
 </div>
