--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/detailed-option-directive/detailed-option-directive.js" class="app"></script>
+  <script src="avBooth/detailed-selected-option-directive/detailed-selected-option-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
