launch help and highlight when a question needs answer to go next

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -4,6 +4,8 @@
   </avb-busy>
   <avb-error-screen ng-if="state == stateEnum.errorScreen">
   </avb-error-screen>
+  <avb-help-screen ng-if="state == stateEnum.helpScreen">
+  </avb-help-screen>
   <avb-start-screen ng-if="state == stateEnum.startScreen">
   </avb-start-screen>
   <avb-multi-question ng-if="state == stateEnum.multiQuestion">
