moving flashing to a jquery plugin

--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 
   <!-- Main App JS -->
   <script src="avUi/avUi.js" class="app"></script>
+  <script src="avUi/jquery.flash.js" class="app"></script>
   <script src="avUi/affix-bottom-directive.js" class="app"></script>
   <script src="avUi/affix-top-directive.js" class="app"></script>
   <script src="avUi/collapsing-directive.js" class="app"></script>
