add another flashing warning and remove overlapping flashing on the same element

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -100,6 +100,7 @@
         </span>
         <span
           class="text-brand-primary"
+          id="maxSelectedLimitReached"
           ng-i18next="[i18next]({max: stateData.question.max})avBooth.maxSelectedLimitReached"
           ng-if="numSelectedOptions() === stateData.question.max">
         </span>
