adding url minimal error checking at start

--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -1,2 +1,2 @@
-<av-booth election-url="{{baseUrl}}election/{{electionId}}" config="{{config}}">
+<av-booth election-url="{{baseUrl}}election/{{electionId}}" config="{{config}}" pre-check="checkElectionUrl()">
 </av-booth>
