finishing a working version of selected options mobile menu

--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -6,7 +6,7 @@
     ng-click="toggleSelectItem(option)">
   </avb-detailed-option>
   <div
-    class="animate-repeat"
+    class="animate-repeat padded-left"
     ng-if="(options | filter:filter).length == 0"
     ng-i18next="avBooth.noResults">
   </div>
