working in the review ballot

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -10,4 +10,6 @@
   </avb-start-screen>
   <avb-multi-question ng-if="state == stateEnum.multiQuestion">
   </avb-multi-question>
+  <avb-review-screen ng-if="state == stateEnum.reviewScreen">
+  </avb-review-screen>
 </div>
