--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -6,6 +6,7 @@
     ng-click="toggleSelectItem(option)">
   </avb-detailed-selected-option>
   <div
+    class="padded"
     ng-if="(options | avbSelectedOptions).length == 0"
     ng-i18next="avBooth.noOptionsSelected">
   </div>
