--- a/index.html
+++ b/index.html
@@ -83,9 +83,11 @@
   <script src="avBooth/error-screen-directive/error-screen-directive.js" class="app"></script>
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
+  <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
+  <script src="avBooth/selected-options-filter.js" class="app"></script>
   <script src="test/test.js" class="app"></script>
   <!-- for security, we do not include the dynamic directive in the app,
        so in the compiled app e2e tests are not expected work. -->
