finish review screen

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -95,6 +95,7 @@
           layout="election.questions[stateData.questionNum].layout"
           max="election.questions[stateData.questionNum].max"
           min="election.questions[stateData.questionNum].min"
+          sorted="true"
           options="election.questions[stateData.questionNum].answers">
         <avb-selected-options>
       </div>
