add ng-sanitize dependency and use it to load help info from config file

--- a/avBooth/help-screen-directive/help-screen-directive.html
+++ b/avBooth/help-screen-directive/help-screen-directive.html
@@ -29,7 +29,7 @@
 <div class="content avb-content">
   <div class="container">
     <div class="row">
-      <div class="col-xs-12" ng-i18next="[html]avBooth.helpDescription">
+      <div class="col-xs-12" ng-bind-html="helpInfo">
       </div>
     </div>
 
