--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
   <script src="bower_components/bootstrap/dist/js/bootstrap.js" class="lib"></script>
   <script src="bower_components/underscore/underscore.js" class="lib"></script>
   <script src="bower_components/angular/angular.js" class="lib"></script>
+  <script src="bower_components/angular-sanitize/angular-sanitize.js" class="lib"></script>
   <script src="bower_components/moment/moment.js" class="lib"></script>
   <script src="bower_components/angular-moment/angular-moment.js" class="lib"></script>
   <script src="bower_components/angular-ui-router/release/angular-ui-router.js" class="lib"></script>
