starting work on casting ballot screen

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -12,4 +12,6 @@
   </avb-multi-question>
   <avb-review-screen ng-if="state == stateEnum.reviewScreen">
   </avb-review-screen>
+  <avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
+  </avb-casting-ballot-screen>
 </div>
