--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
   <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
+  <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
   <script src="avBooth/detailed-option-directive/detailed-option-directive.js" class="app"></script>
   <script src="avBooth/detailed-selected-option-directive/detailed-selected-option-directive.js" class="app"></script>
   <script src="avBooth/error-screen-directive/error-screen-directive.js" class="app"></script>
