--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
   <script src="avUi/recompile-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
-  <script src="crypto/encrypt-answer.js" class="app"></script>
-  <script src="crypto/hmac.js" class="app"></script>
+  <script src="crypto/encrypt-answer-service.js" class="app"></script>
+  <script src="crypto/hmac-service.js" class="app"></script>
+  <script src="crypto/cast-ballot-service.js" class="app"></script>
 
   <script src="app.js" class="app"></script>
   <script src="avBooth/booth.js" class="app"></script>
