converting external crypto libs into angular services

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
   <script src="avUi/recompile-directive.js" class="app"></script>
 
   <script src="crypto/crypto.js" class="app"></script>
+  <script src="crypto/random-service.js" class="app"></script>
+  <script src="crypto/deterministic-json-stringify-service.js" class="app"></script>
+  <script src="crypto/bigint-service.js" class="app"></script>
+  <script src="crypto/sjcl-service.js" class="app"></script>
+  <script src="crypto/elgamal-service.js" class="app"></script>
   <script src="crypto/encrypt-answer-service.js" class="app"></script>
   <script src="crypto/hmac-service.js" class="app"></script>
   <script src="crypto/cast-ballot-service.js" class="app"></script>
