--- a/avBooth/error-screen-directive/error-screen-directive.html
+++ b/avBooth/error-screen-directive/error-screen-directive.html
@@ -9,7 +9,7 @@
   <div class="navbar-unfixed-top text-center" av-collapsing=".unfixed-top-height" data-toggle-selector="avb-multi-question #avb-toggle">
     <div class="container">
       <div class="hidden unfixed-top-height"></div>
-      <h1 ng-i18next="avBooth.helpTitle"></h1>
+      <h1 ng-i18next="avBooth.errorTitle"></h1>
     </div>
   </div>
 </div>
