--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   <script src="crypto/elgamal-service.js" class="app"></script>
   <script src="crypto/encrypt-answer-service.js" class="app"></script>
   <script src="crypto/hmac-service.js" class="app"></script>
+  <script src="crypto/answer-encoder-service.js" class="app"></script>
   <script src="crypto/cast-ballot-service.js" class="app"></script>
 
   <script src="app.js" class="app"></script>
