adding success screen

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -14,4 +14,6 @@
   </avb-review-screen>
   <avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
   </avb-casting-ballot-screen>
+  <avb-success-screen ng-if="state == stateEnum.successScreen">
+  </avb-success-screen>
 </div>
