--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
+  <script src="avBooth/success-screen-directive/success-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-filter.js" class="app"></script>
   <script src="test/test.js" class="app"></script>
   <!-- for security, we do not include the dynamic directive in the app,
