making affix bottom work fine in chrome and removing part of the flickering involved in affix-bottom

--- a/avBooth/help-screen-directive/help-screen-directive.html
+++ b/avBooth/help-screen-directive/help-screen-directive.html
@@ -34,7 +34,7 @@
     </div>
 
     <!-- go back button -->
-    <div class="row" av-affix-bottom data-force-affix-width="768">
+    <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
         ng-i18next="avBooth.goBack"
