--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -102,7 +102,7 @@
     </div>
 
     <!-- next button -->
-    <div class="row" av-affix-bottom="stateData.affixIsSet" data-force-affix-width="768">
+    <div class="row hidden" ng-cloak av-affix-bottom="stateData.affixIsSet" data-force-affix-width="768">
       <p>
         <span
           class="text-brand-warning"
