--- a/avBooth/review-screen-directive/review-screen-directive.html
+++ b/avBooth/review-screen-directive/review-screen-directive.html
@@ -35,7 +35,7 @@
         <avb-review-ballot></avb-review-ballot>
       </div>
     </div>
-    <div class="row" av-affix-bottom data-force-affix-width="768">
+    <div class="row hidden" ng-cloak av-affix-bottom data-force-affix-width="768">
       <button
         class="btn btn-block btn-lg btn-success btn-plain"
         ng-i18next="avBooth.encryptAndCastTheBallot"
