--- a/index.html
+++ b/index.html
@@ -83,6 +83,8 @@
 
   <script src="app.js" class="app"></script>
   <script src="avBooth/booth.js" class="app"></script>
+  <script src="avBooth/accordion-option-directive/accordion-option-directive.js" class="app"></script>
+  <script src="avBooth/accordion-selected-option-directive/accordion-selected-option-directive.js" class="app"></script>
   <script src="avBooth/available-options-directive/available-options-directive.js" class="app"></script>
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
