accordion-option first version finished

--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -15,8 +15,7 @@
   <avb-accordion-option
     ng-repeat="option in options | filter:filter"
     class="animate-repeat"
-    ng-class="{selected: option.selected > -1}"
-    ng-click="toggleSelectItem(option)">
+    ng-class="{selected: option.selected > -1}">
   </avb-accordion-option>
   <div
     class="animate-repeat padded-left"
