--- a/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
+++ b/avBooth/accordion-selected-option-directive/accordion-selected-option-directive.html
@@ -1,5 +1,16 @@
-<span class="show-value">{{option.value}}</span>
-<div class="show-remove">
-  <span ng-i18next="avBooth.removeSelectedItem"></span>
-  <span class="glyphicon glyphicon-remove"></span>
+<div
+  class="opt-data"
+  ng-click="toggleSelectItem(option)">
+  <h4 class="show-value">{{option.value}}</h4>
+  <div class="show-remove">
+    <span ng-i18next="avBooth.removeSelectedItem"></span>
+    <span class="glyphicon glyphicon-remove"></span>
+  </div>
+  <p class="details">{{option.details}}</p>
 </div>
+<a
+  class="btn btn-default btn-right"
+  href="{{option.urls[0].url}}"
+  target="_blank">
+  {{option.urls[0].title}}
+</a>
