--- a/avBooth/selected-options-directive/selected-options-directive.html
+++ b/avBooth/selected-options-directive/selected-options-directive.html
@@ -15,8 +15,7 @@
   <avb-accordion-selected-option
     ng-repeat="option in options | avbSelectedOptions"
     class="animate-repeat"
-    ng-class="{selected: option.selected > -1}"
-    ng-click="toggleSelectItem(option)">
+    ng-class="{selected: option.selected > -1}">
   </avb-accordion-selected-option>
   <div
     class="padded"
