--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -12,14 +12,6 @@
   </div>
 </div>
 <div class="col-xs-12" ng-if="layout === 'accordion'">
-  <avb-accordion-option
-    ng-repeat="option in options | filter:filter"
-    class="animate-repeat"
-    ng-class="{selected: option.selected > -1}">
-  </avb-accordion-option>
-  <div
-    class="animate-repeat padded-left"
-    ng-if="(options | filter:filter).length == 0"
-    ng-i18next="avBooth.noResults">
-  </div>
+  <avb-accordion-options>
+  </avb-accordion-options>
 </div>
