--- a/avBooth/accordion-options-directive/accordion-options-directive.html
+++ b/avBooth/accordion-options-directive/accordion-options-directive.html
@@ -1,10 +1,10 @@
 <avb-accordion-option
-  ng-repeat="option in options | filter:filter"
+  ng-repeat="option in filteredOptions"
   class="animate-repeat"
   ng-class="{selected: option.selected > -1}">
 </avb-accordion-option>
 <div
   class="animate-repeat padded-left"
-  ng-if="(options | filter:filter).length == 0"
+  ng-if="filteredOptions.length == 0"
   ng-i18next="avBooth.noResults">
 </div>
