--- a/avBooth/available-options-directive/available-options-directive.html
+++ b/avBooth/available-options-directive/available-options-directive.html
@@ -1,13 +1,13 @@
 <div class="col-xs-12" ng-if="layout === 'simple'">
   <avb-simple-option
-    ng-repeat="option in options | filter:filter"
+    ng-repeat="option in filteredOptions"
     class="animate-repeat"
     ng-class="{selected: option.selected > -1}"
     ng-click="toggleSelectItem(option)">
   </avb-simple-option>
   <div
     class="animate-repeat padded-left"
-    ng-if="(options | filter:filter).length == 0"
+    ng-if="filteredOptions.length == 0"
     ng-i18next="avBooth.noResults">
   </div>
 </div>
