--- a/avBooth/accordion-options-directive/accordion-options-directive.html
+++ b/avBooth/accordion-options-directive/accordion-options-directive.html
@@ -1,10 +1,35 @@
-<avb-accordion-option
-  ng-repeat="option in filteredOptions"
-  class="animate-repeat"
-  ng-class="{selected: option.selected > -1}">
-</avb-accordion-option>
-<div
-  class="animate-repeat padded-left"
-  ng-if="filteredOptions.length == 0"
-  ng-i18next="avBooth.noResults">
+
+<!-- shown when no filter is being applied (i.e. by default) -->
+<div ng-if="filter.length == 0" class="accordion-mode">
+  <accordion close-others="true">
+    <accordion-group ng-repeat="category in categories" is-open="category.isOpen"
+        ng-class="{'in': category.isOpen}">
+      <accordion-heading>
+      {{category.title}}
+      <span
+        class="pull-right glyphicon"
+        ng-class="{'glyphicon-chevron-down': category.isOpen, 'glyphicon-chevron-right': !category.isOpen}">
+      </span>
+  </accordion-heading>
+      <avb-accordion-option
+        ng-repeat="option in category.options"
+        class="animate-repeat"
+        ng-class="{selected: option.selected > -1}">
+      </avb-accordion-option>
+    </accordion-group>
+  </accordion>
+</div>
+
+<!-- shown when user has entered a filter -->
+<div ng-if="filter.length > 0" class="filter-mode">
+  <avb-accordion-option
+    ng-repeat="option in filteredOptions"
+    class="animate-repeat"
+    ng-class="{selected: option.selected > -1}">
+  </avb-accordion-option>
+  <div
+    class="animate-repeat padded-left"
+    ng-if="filteredOptions.length == 0"
+    ng-i18next="avBooth.noResults">
+  </div>
 </div>
