starting work on draft view

--- a/avBooth/booth-directive/booth-directive.html
+++ b/avBooth/booth-directive/booth-directive.html
@@ -10,6 +10,8 @@
   </avb-start-screen>
   <avb-multi-question ng-if="state == stateEnum.multiQuestion">
   </avb-multi-question>
+  <avb-drafts-election-screen ng-if="state == stateEnum.draftsElectionScreen">
+  </avb-drafts-election-screen>
   <avb-review-screen ng-if="state == stateEnum.reviewScreen">
   </avb-review-screen>
   <avb-casting-ballot-screen ng-if="state == stateEnum.castingBallotScreen">
