--- a/index.html
+++ b/index.html
@@ -90,14 +90,17 @@
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
+  <script src="avBooth/draft-options-directive/draft-options-directive.js" class="app"></script>
   <script src="avBooth/simple-option-directive/simple-option-directive.js" class="app"></script>
   <script src="avBooth/simple-selected-option-directive/simple-selected-option-directive.js" class="app"></script>
+  <script src="avBooth/drafts-election-screen-directive/drafts-election-screen-directive.js" class="app"></script>
   <script src="avBooth/error-screen-directive/error-screen-directive.js" class="app"></script>
   <script src="avBooth/help-screen-directive/help-screen-directive.js" class="app"></script>
   <script src="avBooth/multi-question-directive/multi-question-directive.js" class="app"></script>
   <script src="avBooth/review-ballot-directive/review-ballot-directive.js" class="app"></script>
   <script src="avBooth/review-screen-directive/review-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-directive/selected-options-directive.js" class="app"></script>
+  <script src="avBooth/draft-selected-option-directive/draft-selected-option-directive.js" class="app"></script>
   <script src="avBooth/start-screen-directive/start-screen-directive.js" class="app"></script>
   <script src="avBooth/success-screen-directive/success-screen-directive.js" class="app"></script>
   <script src="avBooth/selected-options-filter.js" class="app"></script>
