--- a/index.html
+++ b/index.html
@@ -90,6 +90,7 @@
   <script src="avBooth/booth-directive/booth-directive.js" class="app"></script>
   <script src="avBooth/busy-directive/busy-directive.js" class="app"></script>
   <script src="avBooth/casting-ballot-screen-directive/casting-ballot-screen-directive.js" class="app"></script>
+  <script src="avBooth/draft-option-directive/draft-option-directive.js" class="app"></script>
   <script src="avBooth/draft-options-directive/draft-options-directive.js" class="app"></script>
   <script src="avBooth/simple-option-directive/simple-option-directive.js" class="app"></script>
   <script src="avBooth/simple-selected-option-directive/simple-selected-option-directive.js" class="app"></script>
